--- a/episodes/statistics.Rmd
+++ b/episodes/statistics.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basic Statistics"
+title: "Basic Statistics: describing, modelling and reporting"
 teaching: 60
 exercises: 20
 source: Rmd
@@ -22,16 +22,9 @@ source: Rmd
 ::::::::::::::::::::::::::::::::::::::::::::::::::
 
 ```{r, include = FALSE}
-knitr::opts_chunk$set(error = TRUE)
+# set output options for 'clean' markdown output
+knitr::opts_chunk$set(error=TRUE, echo = FALSE, warning = TRUE, comment = "",message=FALSE)
 ```
-
-```{r libraries, message=FALSE, warning=FALSE}
-# Packages and data we'll use in this episode
-library(tidyverse)
-library(lubridate)
-```
-
-# Introduction
 
 ## Content
 
@@ -40,36 +33,23 @@ library(lubridate)
 -   Descriptive Statistics
 -   Inferential Statistics
 
-## Getting the data
+## Data
 
-In this episode, we will work with a subset of the [CCHIC](https://doi.org/10.1016/j.ijmedinf.2018.01.006)
-dataset. You can load the data directly in your R session by running the following script.
-
-```{r, eval=FALSE, echo=TRUE}
-## Create a data folder
-dir.create("data", showWarnings = FALSE) # `showWarnings = FALSE` avoids warning if the folder already exists
-download.file(
-    "https://raw.githubusercontent.com/UCL/ClinicianCoders/main/episodes/data/intermediate_CCHIC.csv",
-    destfile = "data/intermediate_CCHIC.csv"
-)
+```{r libraries}
+# We will need these libraries and this data later.
+library(tidyverse)
+library(lubridate)
+library(gapminder)
+#create a binary membership variable for europe (for later examples)
+gapminder <- gapminder %>% 
+  mutate(european = continent == "Europe")
 ```
 
-::::::::::::::::::::::::::::::::::::: instructor
-
-- Help them load the dataset if needed. This is the same one they used in the morning. It should include the *length of stay* variable.
-- Point out that these commands should be run only once, in the console
-:::::::::::::::::::::::::::::::::::::::::::::::::
-
-We can then load the data locally by running
-
-```{r load-data}
-cchic <- read_csv("data/intermediate_CCHIC.csv")
-```
-
+We are going to use the data from the gapminder package.  We have added a variable *european* indicating if a country is in Europe.
 
 ## The big picture
 
--   Research often seeks to answer a question about a larger population by collecting data on a small portion
+-   Research often seeks to answer a question about a larger population by collecting data on a small sample
 -   Data collection:
     -   Many variables
     -   For each person/unit.
@@ -78,139 +58,161 @@ cchic <- read_csv("data/intermediate_CCHIC.csv")
 ## Descriptive and inferential statistics
 
 ::: Background
-Just as data in general are of different types - for example numeric vs text data - statistical data are assigned to different *levels of measure* The level of measure determines how we can describe and model the data.
+Just as data in general are of different types - for example numeric vs text data - statistical data are assigned to different *levels of measure*. The level of measure determines how we can describe and model the data.
+
+<!-- Remove all the detail about data types - it's more statistical theory than R knowledge. -->
+
+<!-- ## Data types -->
+
+<!-- ### Continuous -->
+
+<!-- Continuous data is data that can take any value in the appropriate metric space. Examples are variables like *height* and *temperature*. Very often this is any point on the real number line. Ratio data are data that can form ratios, such that a score of seventy is twice a score of thirty five, and where the intervals between adjacent values is equal. Ratio level data also have a 'true' zero (the phenomenon measured is absent), rather than an arbitrary of calibrated zero (zero degrees celsius is the freezing point of water.) -->
+
+<!-- There is no limit in general to the mathematical operations we can carry out on continuous data. -->
+
+<!-- ::: Side Note It is worth noting that *interval* level data are often included as **continuous** since they can mostly be treated just like ratio data, aside from the calculation of the *coefficient of variation*, but by strict definition they are discrete. ::: -->
+
+<!-- ### Discrete -->
+
+<!-- Discrete data take their value from a closed set of possible values. There is no bound as to what the elements of the set may be - they can be integer values, fractional values, or entirely non-numeric. -->
+
+<!-- Nominal data are data whose observation entails assigning thme to a category from a collection of labelled categories. An example might be eye-colour. The only mathematical procedure we can use with nominal data is *counting* so as to report *frequency* of occurrence and from these frequencies, proportions. Thus the measure of location or of central location for nominal data is **the mode** and the only measure of variability or dispersion is **the variation ratio**. -->
+
+<!-- Ordinal data are discrete data items that can be ranked. So, as well as counting items they can be **ordered**. The mode can almost always be calculated for ordinal data, but it may also be possible to calculate the **median** as an alternative measure of central location. Variability in ordinal data is indicated by **range** and **interquartile range**. -->
+
+<!-- Interval -->
+
+<!-- Interval data are numeric data that are ordered on a scale where the distance between measuring points is equal. Unlike ratio data, the zero point on an interval scale is an arbitrarily chosen calibration and data measurements do not form ratios. -->
+
+<!-- ## Continuous variables -->
+
+<!-- ::: columns -->
+<!-- ::: column -->
+<!-- -   e.g. age, height, weight -->
+<!-- -   Have distributions: -->
+<!--     -   Gaussian -->
+<!--     -   Poisson -->
+<!--     -   Binomial -->
+<!--     -   Cauchy/Lorenz -->
+<!-- -   Can't be described -->
+<!-- ::: -->
+
+<!-- ::: column -->
+<!-- ![](../Images/ContinuousDistribution.png) -->
+<!-- ::: -->
+<!-- ::: -->
+
+<!-- ## What is normally distributed data? -->
+
+<!-- ![](../Images/NormalDistribution.png) -->
+
+<!-- ## Types of discrete variables -->
+
+<!-- -   Nominal -->
+<!--     -   e.g. hair colour, types of antibiotics -->
+<!--     -   There is no order between the data types (e.g. blonde, brunette, red hair) -->
+
+<!-- ## Types of discrete variables -->
+
+<!-- ::: columns -->
+<!-- ::: column -->
+<!-- -   Ordinal -->
+<!--     -   There is an order e.g. `care_level` where Level 3 \> Level 2 \> Level 1 etc. -->
+<!--     -   However, the difference between Level 1 and Level 2 critical care may not be the same as the difference between Level 2 and Level 3. -->
+<!-- ::: -->
+
+<!-- ::: column -->
+<!-- ![](../Images/OrdinalData.png) -->
+<!-- ::: -->
+<!-- ::: -->
+
+<!-- ## Types of discrete data -->
+
+<!-- ::: columns -->
+<!-- ::: column -->
+<!-- -   Interval -->
+<!--     -   There is an order to data points (e.g. `age_cat` for age centile) and the difference between these points are equal (e.g. 10 years) -->
+<!-- ::: -->
+
+<!-- ::: column -->
+<!-- ![](../Images/IntervalData.png) -->
+<!-- ::: -->
 :::
 
-# Data types
-
-## Continuous
-
-Continuous data is data that can take any value in the appropriate metric space. Examples are variables like *height* and *temperature*. Very often this is any point on the real number line. Ratio data are data that can form ratios, such that a score of seventy is twice a score of thirty five, and where the intervals between adjacent values is equal. Ratio level data also have a 'true' zero (the phenomenon measured is absent), rather than an arbitrary of calibrated zero (zero degrees Celsius is the freezing point of water.)
-
-There is no limit in general to the mathematical operations we can carry out on continuous data.
-
-::::::::::::::::::::::::::::::::::::: callout
-Side Note It is worth noting that *interval* level data are often included as **continuous** since they can mostly be treated just like ratio data, aside from the calculation of the *coefficient of variation*, but by strict definition they are discrete.
-:::::::::::::::::::::::::::::::::::::::::::::::::
-
-## Discrete
-
-Discrete data take their value from a closed set of possible values. There is no bound as to what the elements of the set may be - they can be integer values, fractional values, or entirely non-numeric.
-
-Nominal data are data whose observation entails assigning them to a category from a collection of labelled categories. An example might be eye-colour. The only mathematical procedure we can use with nominal data is *counting* so as to report *frequency* of occurrence and from these frequencies, proportions. Thus the measure of location or of central location for nominal data is **the mode** and the only measure of variability or dispersion is **the variation ratio**.
-
-Ordinal data are discrete data items that can be ranked. So, as well as counting items they can be **ordered**. The mode can almost always be calculated for ordinal data, but it may also be possible to calculate the **median** as an alternative measure of central location. Variability in ordinal data is indicated by **range** and **interquartile range**.
-
-Interval
-
-Interval data are numeric data that are ordered on a scale where the distance between measuring points is equal. Unlike ratio data, the zero point on an interval scale is an arbitrarily chosen calibration and data measurements do not form ratios.
-
-# Continuous variables
-
--   e.g. age, height, weight
--   Have distributions:
-    -   Gaussian
-    -   Poisson
-    -   Binomial
-    -   Cauchy/Lorenz
--   Can't be described
-
-![](./fig/ContinuousDistribution.png)
-
-## What is normally distributed data?
-
-![](./fig/NormalDistribution.png)
-
-
-# Discrete variables
-
-## Types of discrete variables
-
-### Nominal
-
--   e.g. hair colour, types of antibiotics
--   There is no order between the data types (e.g. blonde, brunette, red hair)
-
-### Ordinal
-
--   There is an order e.g. `care_level` where Level 3 \> Level 2 \> Level 1 etc.
--   However, the difference between Level 1 and Level 2 critical care may not be the same as the difference between Level 2 and Level 3.
-    
-![](./fig/OrdinalData.png)
-
-### Interval
-
--   There is an order to data points (e.g. `age_cat` for age centile) and the difference between these points are equal (e.g. 10 years)
-    
-![](./fig/IntervalData.png)
-
-# Describing data
+## Describing data
 
 -   Continuous variables
 -   Discrete variables
 
-::: callout
+::: notes
 How do we convey information on what your data looks like, using numbers or figures?
 :::
 
-## Describing continuous data
+## Describing continuous data.
 
+::: columns
+::: column
 First establish the distribution of the data. You can visualise this with a histogram.
 
-```{r, eval = F}
-ggplot(cchic, aes(x = age_years)) +
+```{r}
+ggplot(gapminder, aes(x = gdpPercap)) +
+  geom_histogram()
+```
+
+What is the distribution of this data?
+:::
+
+::: column
+![](../Images/hist_age.png)
+:::
+:::
+
+## What is the distribution of population?
+
+::: columns
+::: column
+
+The raw values are difficult to visualise, so we can take the log of the values and log those.  Try this command
+
+```{r include=TRUE}
+ggplot(data = gapminder, aes(y=log(pop))) +
   geom_histogram()
 ```
 
 What is the distribution of this data?
 
-![](./fig/HistogramAge.png)
+## Parametric vs non-parametric analysis
 
-### What is the distribution of height?
-
-Try this command
-
-```{r, eval = FALSE}
-ggplot(data = cchic, aes(x = height)) +
-  geom_histogram()
-```
-
-What is the distribution of this data?
-
-![](./fig/hist_height.png)
-
-### Parametric vs non-parametric analysis
-
--   Parametric analysis assumes that
+-   Parametric analsysis assumes that
     -   The data follows a known distribution
     -   It can be described using *parameters*
     -   Examples of distributions include, normal, Poisson, exponential.
 -   Non parametric data
     -   The data can't be said to follow a known distribution
 
-::::::::::::::::::::::::::::::::::::: instructor
+::: notes
 Emphasise that parametric is not equal to normal.
-::::::::::::::::::::::::::::::::::::::::::::::::
+:::
 
-#### Describing parametric and non-parametric data
+## Describing parametric and non-parametric data
 
 How do you use numbers to convey what your data looks like.
 
 -   Parametric data
     -   Use the parameters that describe the distribution.
     -   For a Gaussian (normal) distribution - use mean and standard deviation
-    -   For a Poisson distribution - use average event rate
+    -   For a Poission distribution - use average event rate
     -   etc.
 -   Non Parametric data
     -   Use the median (the middle number when they are ranked from lowest to highest) and the interquartile range (the number 75% of the way up the list when ranked minus the number 25% of the way)
 -   You can use the command `summary(data_frame_name)` to get these numbers for each variable.
 
-#### Mean and standard deviation
+## Mean versus standard deviation
 
 -   What does standard deviation mean?
 -   Both graphs have the same mean (center), but the second one has data which is more spread out.
 
-```{r, eval = FALSE}
+```{r}
 
 # small standard deviation
 dummy_1 <- rnorm(1000, mean = 10, sd = 0.5)
@@ -219,43 +221,44 @@ ggplot(dummy_1, aes(x = dummy_1)) +
   geom_histogram()
 
 # larger standard deviation
-dummy_2 <- rnorm(1000, mean = 10, sd = 20)
+dummy_2 <- rnorm(1000, mean = 10, sd = 200)
 dummy_2 <- as.data.frame(dummy_2)
 ggplot(dummy_2, aes(x = dummy_2)) +
   geom_histogram()
 ```
 
-::::::::::::::::::::::::::::::::::::: instructor
+::: notes
 Get them to plot the graphs. Explain that we are generating random data from different distributions and plotting them.
-::::::::::::::::::::::::::::::::::::::::::::::::
+:::
 
-##### Calculating mean and standard deviation
+## Calculating mean and standard deviation
 
-```{r, eval = T}
-mean(cchic$height, na.rm = TRUE)
+```{r, eval = T, include = TRUE}
+mean(gapminder$pop, na.rm = TRUE)
 ```
 
 Calculate the standard deviation and confirm that it is the square root of the variance:
 
-```{r, eval = T}
-sdheight = sd(cchic$height, na.rm = TRUE)
+```{r, eval = T include = T}
+sdpopulation = sd(gapminder$pop, na.rm = TRUE)
+print(sdpopulation)
 
-varheight = var(cchic$height, na.rm = TRUE)
-
-sqrt(varheight) == sdheight
+varpopulation = var(gapminder$pop, na.rm = TRUE)
+print(varpopulation)
+sqrt(varpopulation) == sdpopulation
 
 ```
 
 The `na.rm` argument tells R to ignore missing values in the variable.
 
-#### Mean and interquartile range
+## Calculating median and interquartile range
 
 ```{r, eval = T}
-median(cchic$age_years, na.rm = TRUE)
+median(gapminder$pop, na.rm = TRUE)
 ```
 
-```{r, eval = T}
-IQR(cchic$age_years, na.rm = TRUE)
+```{r}
+IQR(gapminder$gdpPercap, na.rm = TRUE)
 ```
 
 Again, we ignore the missing values.
@@ -264,32 +267,34 @@ Again, we ignore the missing values.
 
 -   Frequencies
 
-```{r, eval = T}
-table(cchic$vital_status)
+```{r}
+table(gapminder$continent)
 ```
 
 -   Proportions
 
 ```{r, eval = T}
-status <- table(cchic$vital_status)
-prop.table(status)
+continenttable <- table(gapminder$continent)
+prop.table(continenttable)
 ```
 
 Contingency tables of frequencies can also be tabulated with **table()**. For example:
-
 ```{r}
-table(cchic$vital_status, cchic$chemo)
+# need a better table!  This one is dumb.  Howabout count of country by continent?
+
+table(gapminder$continent[gapminder$year==2007],gapminder$country[gapminder$year==2007])
+
 ```
 
 Which leads quite naturally to the consideration of any association between the observed frequencies.
 
-# Inferential statistics
+## Inferential statistics
 
 ## Meaningful analysis
 
 -   What is your hypothesis - what is your null hypothesis?
 
-::: callout
+::: Note
 Always: the level of the independent variable has no effect on the level of the dependent variable.
 :::
 
@@ -299,23 +304,21 @@ Always: the level of the independent variable has no effect on the level of the 
 
 -   Interpreting the result
 
-## What is a p-value?
+<!-- ## What is a p-value? -->
 
-![](./fig/pValue.png)
+<!-- ![](../Images/pValue.png) -->
 
-[The Lady Tasting Tea](https://analyticalsciencejournals.onlinelibrary.wiley.com/doi/10.1002/cem.3239)
+<!-- [The Lady Tasting Tea](https://analyticalsciencejournals.onlinelibrary.wiley.com/doi/10.1002/cem.3239) -->
 
-Fisher informally characterised the *p-value* as an estimate of the strength of the evidence against the null hypothesis [^1] (Dahiru T. (2008). P - value, a true test of statistical significance? A cautionary note. Annals of Ibadan postgraduate medicine, 6(1), 21--26. <https://doi.org/10.4314/aipm.v6i1.64038>)
+<!-- Fisher informally characterised the *p-value* as an estimate of the strength of the evidence against the null hypothesis [^1] (Dahiru T. (2008). P - value, a true test of statistical significance? A cautionary note. Annals of Ibadan postgraduate medicine, 6(1), 21--26. <https://doi.org/10.4314/aipm.v6i1.64038>) -->
 
-[^1]: Dahiru T. (2008). P - value, a true test of statistical significance? A cautionary note. *Annals of Ibadan postgraduate medicine*, *6*(1), 21--26. <https://doi.org/10.4314/aipm.v6i1.64038>
+<!-- [^1]: Dahiru T. (2008). P - value, a true test of statistical significance? A cautionary note. *Annals of Ibadan postgraduate medicine*, *6*(1), 21--26. <https://doi.org/10.4314/aipm.v6i1.64038> -->
 
-Depending on the data under consideration and our purpose, we choose a threshold of evidence for the rejection of the null hypothesis. For many purposes, a confidence level of 95% is chosen, which means that a p-value of less than 0.05 is sufficient to reject the null hypothesis. In other circumstances and confidence level of 99% may be appropriate, or even higher.
+<!-- Depending on the data under consideration and our purpose, we choose a threshold of evidence for the rejection of the null hypothesis. For many purposes, a confidence level of 95% is chosen, which means that a p-value of less than 0.05 is sufficient to reject the null hypothesis. In other circumstances and confidence level of 99% may be appropriate, or even higher. -->
 
-::: callout
-**What we are usually hoping for...**
+<!-- ## What we are usually hoping... -->
 
-![](./fig/pValue2.png)
-:::
+<!-- ![](../Images/pValue2.png) -->
 
 ## Testing significance
 
@@ -329,7 +332,7 @@ Depending on the data under consideration and our purpose, we choose a threshold
 
 **0.05** is not a magic number.
 
-### Comparing means
+## Comparing means
 
 It all starts with a hypothesis
 
@@ -338,7 +341,7 @@ It all starts with a hypothesis
 -   Alternate hypothesis
     -   "There is a difference in mean height between men and women"
 
-### More on hypothesis testing
+## More on hypothesis testing
 
 -   The null hypothesis (H0) assumes that the true mean difference (μd) is equal to zero.
 
@@ -352,24 +355,20 @@ It all starts with a hypothesis
 
 ## Comparing means
 
-Is there an absolute difference between the heights of males and females?
+Is there an absolute difference between the populations of European vs non-European countries?
 
 ```{r}
-cchic %>%
-  group_by(sex) %>%
-  summarise(av.height = mean(height, na.rm = TRUE))
+gapminder %>%
+  group_by(european) %>%
+  summarise(av.popn = mean(pop, na.rm = TRUE))
 ```
+
 
 Is the difference between heights statistically significant?
 
-### t-test
+## t-test
 
--   Compares means between two populations
--   Paired vs. Unpaired
-
-![](./fig/Ttest.png)
-
-#### Assumptions of a t-test
+## Assumptions of a t-test
 
 -   One independent categorical variable with 2 groups and one dependent continuous variable
 
@@ -379,40 +378,43 @@ Is the difference between heights statistically significant?
 
 -   For students' original t-statistic, that the variances in both groups are more or less equal. This constraint should probably be abandoned in favour of always using a conservative test.
 
-#### Doing a t-test
-
-```{r, eval = FALSE}
-t.test(height ~ sex, data = cchic)
-```
-
-::::::::::::::::::::::::::::::::::::: instructor
-Tell them to do this. The default for t.test() is that variances are unequal and it produces Welch's statistic.
-::::::::::::::::::::::::::::::::::::::::::::::::
-
-```{r, echo = FALSE}
-t.test(height ~ sex, data = cchic)
-```
-
-::::::::::::::::::::::::::::::::::::: instructor
-Quickly explain the main points of the output
-::::::::::::::::::::::::::::::::::::::::::::::::
-
-## Comparing counts
-
--   Is survival different between genders?
+## Doing a t-test
 
 ```{r}
-table(cchic$sex, cchic$vital_status)
+t.test(pop ~ european, data = gapminder)$statistic
+t.test(pop ~european, data = gapminder)$parameter
+
 ```
 
-### What is our hypothesis?
+Notice that the summary()** of the test contains more data than is output by default.
+ 
+
+Write a paragraph in markdown format reporting this test result including the t statistic, the degress of freedom, the confidence interval and the p-value to 4 places.  To do this include your r code **inline** with your text, rather than in an R code chunk.
+
+### T Test Result
+
+Testing supported the rejection of the null hypothesis that there is no difference between mean populations of European and non-European participants (**t**=`r round(t.test(pop ~european, data = gapminder)$statistic,4)`, **df**= `r round(t.test(pop ~european, data = gapminder)$parameter,4)`, **p**= `r round(
+t.test(pop ~european, data = gapminder)$p.value,4)`).
+
+(Can you get p to display to four places?  Cf *format()*.)
+
+<!--
+## Comparing counts
+
+?
+
+```{r}
+table(gapminder$sex, gapminder$vital_status)
+```
+
+## What is our hypothesis?
 
 -   Null hypothesis
     -   There is no difference in survival between men and women
 -   Alternate hypothesis
     -   There is a difference in survival between men and women
 
-### Assumptions of the chi-squared test.
+## Assumptions of the chi-squared test.
 
 1.  Data in cells should be frequencies or counts *not* percentages
 2.  Levels/Categories are mutually exclusive -- here being a alive/dead applies
@@ -423,30 +425,26 @@ table(cchic$sex, cchic$vital_status)
 
 `Biochem Med (Zagreb). 2013 Jun; 23(2): 143–149.`
 
-### Doing the chi-squared test.
+## Doing the chi-squared test.
 
 Start with `?chisq.test`. Then do the test.
 
 ```{r}
-x <- chisq.test(cchic$sex, cchic$vital_status)
-summary(x)
+xresults<-chisq.test(gapminder$sex, gapminder$vital_status)
+xresults$statistic
 ```
 
-::::::::::::::::::::::::::::::::::::: instructor
-(important as it holds for results of all statistical tests) Get them to do this, then explain the output. Do the same test, assigning the result to a data object and explain how to access the contents of the data object to show, df, expected values, residuals etc.
-::::::::::::::::::::::::::::::::::::::::::::::::
-
-## Non-parametric versions
+## Non paramteric versions
 
 Is length of stay different between genders?
 
 ```{r, message=FALSE}
-ggplot(data = cchic, aes(x = los)) +
+ggplot(data = gapminder, aes(x = los)) +
   geom_histogram() +
   facet_grid(~sex)
 ```
 
-### When do you use a non-parametric test?
+## When do you use a non-parametric test?
 
 -   When any of the the following are true.
     -   Level of measurement is nominal or ordinal
@@ -455,74 +453,78 @@ ggplot(data = cchic, aes(x = los)) +
     -   Unequal variance
     -   Continuous data collapsed into small number of categories
 
-### Using the Mann-Whitney test
+## Using the Mann Whitney test
 
-`??Mann-Whitney` will show you that the command is actually called `wilcox.test`.
+`??Mann-Whitney` will show you that the command is actually called `wilcox.test`.t
 
 ```{r}
-wilcox.test(los ~ sex, data = cchic)
+wilcox.test(los ~ sex, data = gapminder)
 ```
+-->
 
-::::::::::::::::::::::::::::::::::::: instructor
-Explain the output
-::::::::::::::::::::::::::::::::::::::::::::::::
+## more than two levels of IV
 
-## More than two levels of IV
-
-While the t-test is sufficient where there are two levels of the IV, for situations where there are more than two, we use the **ANOVA** family of procedures. To show this, we will create a variable that subsets our data by *creatinine* levels. If the ANOVA result is statistically significant, we will use a post-hoc test method to do pairwise comparisons (here Tukey's Honest Significant Differences.)
+While the t-test is sufficient where there are two levels of the IV, for situations where there are more than two, we use the **ANOVA** family of procedures. To show this, we will create a variable that subsets our data by *per capita gdp* levels. If the ANOVA result is statistically significant, we will use a post-hoc test method to do pairwise comparisons (here Tukey's Honest Significant Differences.)
 
 ```{r}
-quantile(cchic$creatinine)
-IQR(cchic$creatinine)
+quantile(gapminder$gdpPercap)
+IQR(gapminder$gdpPercap)
 
-cchic$creatininegroup <- cut(cchic$creatinine, breaks = c(15, 64, 83, 123, 1533), labels = FALSE)
+gapminder$gdpGroup <- cut(gapminder$gdpPercap, breaks=c(241.1659, 1202.0603, 3531.8470   , 9325.4623 ,113523.1329 ), labels = FALSE)
 
-# cchic %>%
-#  mutate(creatininegroup = cut(cchic$creatinine, breaks=c(15, 64, 83, 123,1533), labels = FALSE))
+gapminder$gdpGroup <- factor(gapminder$gdpGroup)
 
-cchic$creatininegroup <- factor(cchic$creatininegroup)
-
-anovamodel <- aov(cchic$ph_abg ~ cchic$creatininegroup)
+anovamodel <- aov(gapminder$pop~gapminder$gdpGroup)
 summary(anovamodel)
 
 TukeyHSD(anovamodel)
+
 ```
 
-## Regression Modelling
+# Regression Modelling
 
-The most common use of regression modelling is to explore the relationship between two continuous variables, for example between `temp_c` and `temp_nc` in our data. We can first determine whether there is any significant correlation between the values, and if there is, plot the relationship.
+The most common use of regression modelling is to explore the relationship between two continuous variables, for example between **temp_c** and \*\*temp_nc\* in our data. We can first determine whether there is any sifnigicant correlation between the values, and if there is, plot the relationship.
 
 ```{r}
-cor.test(cchic$temp_c, cchic$temp_nc)
 
-ggplot(cchic, aes(temp_c, temp_nc)) +
+cor.test(gapminder$gdpPercap, gapminder$lifeExp)
+
+ggplot(gapminder,aes(gdpPercap, log(lifeExp))) +
   geom_point() +
-  geom_smooth(method = "lm")
+  geom_smooth()
+
 
 ```
 
-Having decided that a further investigation of this relationship is worthwhile, we can create a linear model with the function `lm()`
+Having decided that a further investigation of this relationship is worthwhile, we can create a linear model with the function **lm()**.
 
 ``` {r}
-modelone <- lm(cchic$temp_nc ~ cchic$temp_c)
+
+modelone <- lm(gapminder$gdpPercap~gapminder$lifeExp)
 summary(modelone)
 
 ```
 
-### Regression with a categorical IV (the t-test)
+## Regression with a categorical IV (the t-test)
 
 Run the following code chunk and compare the results to the t test conducted earlier.
 
 ```{r}
-cchic %>%
-  mutate(sex = factor(sex))
 
-modelttest <- lm(cchic$height ~ cchic$sex)
+gapminder %>% 
+  mutate(european = factor(european))
+
+modelttest <- lm(gapminder$pop~gapminder$european)
 
 summary(modelttest)
 
 ```
 
-### Regression with a categorical IV (ANOVA)
+## Regression with a categorical IV (ANOVA)
 
-Use the `lm()` function to model the relationship between `cchic$creatininegroup` and `cchic$ph_abg`.  Compare the results with the ANOVA carried out earlier.
+Use the **lm()** function to model the relatinship between gapminder$gdpGroup
+and gapminder$pop.  Compare the results with the ANOVA carried out earlier.
+
+## Lunch
+
+-   Feel free to explore the handout and go through the exercices again.
