--- a/episodes/statistics.Rmd
+++ b/episodes/statistics.Rmd
@@ -23,7 +23,7 @@ source: Rmd
 
 ```{r, include = FALSE}
 # set output options for 'clean' markdown output
-knitr::opts_chunk$set(error=TRUE, echo = FALSE, warning = TRUE, comment = "",message=FALSE)
+knitr::opts_chunk$set(error = TRUE, echo = FALSE, warning = TRUE, comment = "", message = FALSE)
 ```
 
 ## Content
@@ -35,13 +35,13 @@ knitr::opts_chunk$set(error=TRUE, echo = FALSE, warning = TRUE, comment = "",mes
 
 ## Data
 
-```{r libraries}
+```{r libraries, message=FALSE, warning=FALSE}
 # We will need these libraries and this data later.
 library(tidyverse)
 library(lubridate)
 library(gapminder)
-#create a binary membership variable for europe (for later examples)
-gapminder <- gapminder %>% 
+# create a binary membership variable for europe (for later examples)
+gapminder <- gapminder %>%
   mutate(european = continent == "Europe")
 ```
 
@@ -175,7 +175,7 @@ What is the distribution of this data?
 The raw values are difficult to visualise, so we can take the log of the values and log those.  Try this command
 
 ```{r include=TRUE}
-ggplot(data = gapminder, aes(y=log(pop))) +
+ggplot(data = gapminder, aes(y = log(pop))) +
   geom_histogram()
 ```
 
@@ -213,7 +213,6 @@ How do you use numbers to convey what your data looks like.
 -   Both graphs have the same mean (center), but the second one has data which is more spread out.
 
 ```{r}
-
 # small standard deviation
 dummy_1 <- rnorm(1000, mean = 10, sd = 0.5)
 dummy_1 <- as.data.frame(dummy_1)
@@ -240,13 +239,12 @@ mean(gapminder$pop, na.rm = TRUE)
 Calculate the standard deviation and confirm that it is the square root of the variance:
 
 ```{r, eval = T include = T}
-sdpopulation = sd(gapminder$pop, na.rm = TRUE)
+sdpopulation <- sd(gapminder$pop, na.rm = TRUE)
 print(sdpopulation)
 
-varpopulation = var(gapminder$pop, na.rm = TRUE)
+varpopulation <- var(gapminder$pop, na.rm = TRUE)
 print(varpopulation)
 sqrt(varpopulation) == sdpopulation
-
 ```
 
 The `na.rm` argument tells R to ignore missing values in the variable.
@@ -282,8 +280,7 @@ Contingency tables of frequencies can also be tabulated with **table()**. For ex
 ```{r}
 # need a better table!  This one is dumb.  Howabout count of country by continent?
 
-table(gapminder$continent[gapminder$year==2007],gapminder$country[gapminder$year==2007])
-
+table(gapminder$continent[gapminder$year == 2007], gapminder$country[gapminder$year == 2007])
 ```
 
 Which leads quite naturally to the consideration of any association between the observed frequencies.
@@ -382,8 +379,7 @@ Is the difference between heights statistically significant?
 
 ```{r}
 t.test(pop ~ european, data = gapminder)$statistic
-t.test(pop ~european, data = gapminder)$parameter
-
+t.test(pop ~ european, data = gapminder)$parameter
 ```
 
 Notice that the summary()** of the test contains more data than is output by default.
@@ -430,7 +426,7 @@ table(gapminder$sex, gapminder$vital_status)
 Start with `?chisq.test`. Then do the test.
 
 ```{r}
-xresults<-chisq.test(gapminder$sex, gapminder$vital_status)
+xresults <- chisq.test(gapminder$sex, gapminder$vital_status)
 xresults$statistic
 ```
 
@@ -470,15 +466,14 @@ While the t-test is sufficient where there are two levels of the IV, for situati
 quantile(gapminder$gdpPercap)
 IQR(gapminder$gdpPercap)
 
-gapminder$gdpGroup <- cut(gapminder$gdpPercap, breaks=c(241.1659, 1202.0603, 3531.8470   , 9325.4623 ,113523.1329 ), labels = FALSE)
+gapminder$gdpGroup <- cut(gapminder$gdpPercap, breaks = c(241.1659, 1202.0603, 3531.8470, 9325.4623, 113523.1329), labels = FALSE)
 
 gapminder$gdpGroup <- factor(gapminder$gdpGroup)
 
-anovamodel <- aov(gapminder$pop~gapminder$gdpGroup)
+anovamodel <- aov(gapminder$pop ~ gapminder$gdpGroup)
 summary(anovamodel)
 
 TukeyHSD(anovamodel)
-
 ```
 
 # Regression Modelling
@@ -486,23 +481,18 @@ TukeyHSD(anovamodel)
 The most common use of regression modelling is to explore the relationship between two continuous variables, for example between **temp_c** and \*\*temp_nc\* in our data. We can first determine whether there is any sifnigicant correlation between the values, and if there is, plot the relationship.
 
 ```{r}
-
 cor.test(gapminder$gdpPercap, gapminder$lifeExp)
 
-ggplot(gapminder,aes(gdpPercap, log(lifeExp))) +
+ggplot(gapminder, aes(gdpPercap, log(lifeExp))) +
   geom_point() +
   geom_smooth()
-
-
 ```
 
 Having decided that a further investigation of this relationship is worthwhile, we can create a linear model with the function **lm()**.
 
 ``` {r}
-
-modelone <- lm(gapminder$gdpPercap~gapminder$lifeExp)
+modelone <- lm(gapminder$gdpPercap ~ gapminder$lifeExp)
 summary(modelone)
-
 ```
 
 ## Regression with a categorical IV (the t-test)
@@ -510,14 +500,12 @@ summary(modelone)
 Run the following code chunk and compare the results to the t test conducted earlier.
 
 ```{r}
-
-gapminder %>% 
+gapminder %>%
   mutate(european = factor(european))
 
-modelttest <- lm(gapminder$pop~gapminder$european)
+modelttest <- lm(gapminder$pop ~ gapminder$european)
 
 summary(modelttest)
-
 ```
 
 ## Regression with a categorical IV (ANOVA)
